--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 .RData
 .bash_history
 .local
-./shiny_app_logs/*.log
-./gbm_pdx_str/*.Rprofvis
-./gbm_pdx_str/data/initial_data_prep/*/
+shiny_app_logs/*.log
+gbm_pdx_str/*.Rprofvis
+gbm_pdx_str/data/initial_data_prep/
