--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .RData
 .bash_history
 .local
-shiny_app_logs/*.log
-gbm_pdx_str/*.Rprofvis
-gbm_pdx_str/data/initial_data_prep/
+GbmPdxSTR/shiny_app_logs/*.log
+GbmPdxSTR/*.Rprofvis
+GbmPdxSTR/data/initial_data_prep/
+.Rproj.user
