--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 .RData
 .bash_history
 .local
+.Rproj.user
 GbmPdxSTR/shiny_app_logs/*.log
 GbmPdxSTR/*.Rprofvis
 GbmPdxSTR/data/initial_data_prep/
-.Rproj.user
+GbmPdxSTR/app_cache/*
