--- a/GbmPdxSTR/DESCRIPTION
+++ b/GbmPdxSTR/DESCRIPTION
@@ -1,12 +1,30 @@
 Package: GbmPdxSTR
-Title: What the Package Does (One Line, Title Case)
+Title: Performs Short Tandem Repeat (STR) search between queries and glioblastoma patient-derived xenograft tumors
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Lara", "Ianov", , "lianov@uab.edu", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-1859-2118"))
+Description: A Shiny app-package which provides user-friendly interface to
+    search for STR similarity between your queries and the glioblastoma (GBM)
+    patient-derived xenograft (PDX) tumors present at the University of Alabama
+    at Birmingham (UAB). It allows users to perform multi-query searches and
+    provides custom references beyond what is present at UAB.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    bslib,
+    dplyr,
+    DT,
+    ggplot2,
+    markdown,
+    openxlsx,
+    pkgload,
+    plyr,
+    shiny,
+    shinycssloaders,
+    shinyhelper,
+    shinyjs,
+    stringr,
+    tibble
